Imported from https://bunnyyTheFreak@github.com/FreakyOS/manifest.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = The Freaky Brain ????
+[access "refs/*"]
+	owner = group user/bunnyyTheFreak
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/bunnyyTheFreak
+	label-Verified = -1..+1 group user/bunnyyTheFreak
+	push = group user/bunnyyTheFreak
+	read = group user/bunnyyTheFreak
+	rebase = group user/bunnyyTheFreak
+	removeReviewer = group user/bunnyyTheFreak
+	submit = group user/bunnyyTheFreak
+[access "refs/heads/*"]
+	create = group user/bunnyyTheFreak
+	push = +force group user/bunnyyTheFreak
+	pushMerge = group user/bunnyyTheFreak
+	read = group user/bunnyyTheFreak
+[access "refs/tags/*"]
+	push = group user/bunnyyTheFreak
+	push = +force group user/bunnyyTheFreak
